--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>02/2023, We will organize a tutorial Recent Advances in Visual Domain Adaptation and Generalization at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>  
 		  	<li>01/2023, Three papers on fair graph learning, continual federated learning, and few-shot transfer learning are accepted at <a href="https://iclr.cc/Conferences/2023" target="_blank">ICLR 2023</a>.</li> 
 		  	<li>01/2023, One paper is accepted by Bioinformatics; One paper is accepted by JMIR AI.</li>
 		  	<li>12/2022, Seven papers are accepted at <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>, <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, Briefings in Bioinformatics, AAAI-23 <a href="https://www.continualcausality.org/" target="_blank">Bridge Program</a>, and <a href="https://icaart.scitevents.org/" target="_blank">ICAART 2023</a>.
