--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
 		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award,
 		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
-		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for NeurIPS, IJCAI and ICLR.</p>
+		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
         </div>
       </div>
     </div>
