--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
 		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
 		  in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, 
-		  visual intelligence, and causal inference. He has published over 120 papers, and has received over 10 research awards, 
+		  visual intelligence, and causal inference. He has published over 130 papers, and has received over 10 research awards, 
 		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award,
 		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
 		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
@@ -125,6 +125,7 @@
       <div class="row">
         <div class="col-md-12 w-100">
           <ul class="">
+		  	<li>02/2023, One paper on video recognition is accepted at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>
 		  	<li>02/2023, We will organize a tutorial Recent Advances in Visual Domain Adaptation and Generalization at <a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2023</a>.</li>  
 		  	<li>01/2023, Three papers on fair graph learning, continual federated learning, and few-shot transfer learning are accepted at <a href="https://iclr.cc/Conferences/2023" target="_blank">ICLR 2023</a>.</li> 
 		  	<li>01/2023, One paper is accepted by Bioinformatics; One paper is accepted by JMIR AI.</li>
