--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
-		  	<li>12/2024, One proposal on trustworthy AI and educational assessment is accepted at the AAAI 2025 <a href="https://aaai.org/conference/aaai/aaai-25/senior-member-presentation-track-call-for-proposals/ target="_blank">Senior Member Presentation Track</a>.</li>
+		  	<li>12/2024, One proposal on trustworthy AI and educational assessment is accepted at the <a href="https://aaai.org/conference/aaai/aaai-25/senior-member-presentation-track-call-for-proposals/ target="_blank">AAAI 2025 Senior Member Presentation Track</a>.</li>
 		  	<li>12/2024, One paper on black-box backdoor detection with causal inference is accepted by TMLR.</li>
-		  	<li>11/2024, I am invited to give a talk at the AAAI 2025 Bridge Program on <a href="https://www.continualcausality.org/ target="_blank">Continual Causality</a>.</li>
+		  	<li>11/2024, I am invited to give a talk at the <a href="https://www.continualcausality.org/ target="_blank">AAAI 2025 Bridge Program on Continual Causality</a>.</li>
 		  	<li>11/2024, Received a <strong>DOD DURIP Grant</strong> to support our research projects.</li>
 		  	<li>11/2024, I accepted the invitations to serve as Action Editor for the Transactions on Machine Learning Research (TMLR) and Area Chair for IJCAI 2025.</li>
 		  	<li>11/2024, One paper on individual-level continuous treatment effect estimation is accepted by TMLR.</li>
